Made Silents sold out.  Removed old events.

--- a/Event_Pages/index.html
+++ b/Event_Pages/index.html
@@ -137,10 +137,11 @@ function MM_swapImage() { //v3.0
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
                                             <br>
                                             <h2 align="center" class="silents">
-                                            Click below to purchase tickets for 
-                                            this year's event
+                                            Ticket sales closed for
+                                            this year's event.  Thank you, valued supporters!
                                              <br>
                                              <br>
+                                             <!--
                                             <a target="_blank" 
                                              href="https://www.eventbrite.com/e/silents-under-the-stars-2019-hart-hall-william-s-hart-park-newhall-ca-tickets-63519411269">
                                              <button type="button">Buy Tickets to 2019 <br>Silents Under the Stars</button>
@@ -151,6 +152,7 @@ function MM_swapImage() { //v3.0
                                              <br>
 											    <h3 align="center">Tickets are non-Refundable</h3>
                                             </h2>
+                                            -->
 											</TD>
 											</TR>
 											<TR>
