--- a/index.htm
+++ b/index.htm
@@ -258,14 +258,14 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
                           <p>
-<h2 align="center">Tickets now on Sale for <br></h2>
+<h2 align="center">Tickets now sold out for <br></h2>
 <p align="center">
 <a href="Event_Pages/silents.html">
 <img src="Event_Pages/silents/silents2019sign-sm.jpg"/>
 </a>
 <p align="center">
 <h3 align="center">Click 
-<a href="Event_Pages/silents.html">HERE</a> to purchase yours!
+<a href="Event_Pages/silents.html">HERE</a> for detais.
 </h3>
 <br>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
@@ -277,28 +277,19 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   <tbody>
 
 <tr> <td id="EventDate">
-Fridays at dusk, June 28<sup>th</sup>, July 12<sup>th</sup>, July 26<sup>th</sup>, Aug 16<sup>th</sup>
-</td> <td id="Event"> 
-<a href= "Event_Pages/movies2019/movies2019-lg.png" 
-   title="Movies in the Park" rel="lightbox[events2019]">
-Summer Movies in the Park
-</a>
-</td></tr>
-
-<tr> <td id="EventDate">
-Friday July 20<sup>th</sup>, at dusk
-</td> <td id="Event"> 
-<a href= "Event_Pages/music2019/music2019-lg.jpg" 
-   title="Music in the Park" rel="lightbox[events2019]">
-Music in the Park
-</a>
-</td></tr>
-
-<tr> <td id="EventDate">
 Saturday, August 10<sup>th</sup> at 6pm
 </td> <td id="Event"> 
 <a href="Event_Pages/silents.html">
 Silents Under the Stars
+</a>
+</td></tr>
+
+<tr> <td id="EventDate">
+Friday at dusk, Aug 16<sup>th</sup>
+</td> <td id="Event"> 
+<a href= "Event_Pages/movies2019/movies2019-lg.png" 
+   title="Movies in the Park" rel="lightbox[events2019]">
+Summer Movies in the Park
 </a>
 </td></tr>
 
