Made Silents past, with old photos.  Updated latest events.

--- a/Zoo/animals.html
+++ b/Zoo/animals.html
@@ -138,12 +138,25 @@ function MM_swapImage() { //v3.0
 					</TABLE>
 					</div>
 					<HR>
-					<p align="center" style="margin-top: 7px; margin-bottom: 5px">
-					<b><i><font size="4" color="#0050A5">
-                                    Greetings Patrons</i>, 
-                                    on February 27, 2019, a California Regional Quarantine was issued for all of L.A. County and sections of Riverside County and San Bernardino County for all public exhibitions of birds due to the threat of Virulent Newcastle Disease.  As a result, our Barnyard is quarantined and not available to the public until the quarantine is lifted.  
+					<p class="cowboyfest" align="center">
+                    <em>Barnyard now partially open 9am-2pm every day!</em>
+                    <p class="cowboyfest" align="center">
+                    Only the chicken area is still off limits due to the dangers of our 
+                    healthy chickens contracting Newcastle disease.
+                    <p class="cowboyfest" align="center">
+                    So, come on by and see the Alpacas and all the other fun 
+                    (non-fowl) friends at our now-open barnyard!!!
+                    </p>
+					<p class="lots" align="center" style="margin-top: 7px; margin-bottom: 5px">
+					<small>
+					<small>
+                                    On February 27, 2019, a California Regional Quarantine was issued for all of L.A. County and sections of Riverside County and San Bernardino County for all public exhibitions of birds due to the threat of Virulent Newcastle Disease.  As a result, our Barnyard is quarantined and not available to the public until the quarantine is lifted.  
                                     <em>Please know our animal residents are fine and this quarantine is helping to keep them safe.  </em>
-<p>We appreciate your patience and understanding during this time.  Thank you.
+</small>
+</small>
+<p align="center" style="margin-top: 7px; margin-bottom: 5px">
+<small>We appreciate your patience and understanding during this time.  Thank you.
+</small>
 <br><i>&mdash;The Hart Park Staff, 661-259-1750</i>
                     
                     
@@ -153,7 +166,7 @@ function MM_swapImage() { //v3.0
 					roaming our park!&nbsp; The last remaining bison from Disney's gift died in 1994.<br><br>
 To read more about Walt Disney's donation of bison to the Wm. S. Hart Park see these articles from the SCV Historical Society's picture archive site:
 -->
-<br> </font></i></b></p>
+<br> </i></p>
 <!--
 					<ul>
 						<li>
