--- a/index.htm
+++ b/index.htm
@@ -181,12 +181,12 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                             width="324">
                             <table style=" height: 437px;" border="0">
                               <tbody>
-                                  <td style=" height: 279px;" id="NEWS2">
+                                  <td style=" height: 300px;" id="NEWS2">
                                         <p align="center"> <iframe
 src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FThe-Friends-of-Hart-Park%2F171859949545623&amp;width=292&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=true&amp;header=true&amp;height=427"
                                             style="border:medium none;
                                             overflow:hidden;
-                                            width:292px; height:448px;"
+                                            width:300px; height:448px;"
                                             allowtransparency="true"
                                             frameborder="0"
                                             scrolling="no"></iframe> </p>
@@ -215,29 +215,6 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                             border="0" height="24"
                                             width="313"></font></b></i></td>
                                 </tr>
-                                <tr>
-                                  <td style="vertical-align: top;">
-                                    <h2>
-                                    Barnyard Closed
-                                    </h2>
-                                    <p>
-                                    <i>Greetings Patrons</i>, 
-                                    on February 27, 2019, a California Regional Quarantine was issued for all of L.A. County and sections of Riverside County and San Bernardino County for all public exhibitions of birds due to the threat of Virulent Newcastle Disease.  As a result, our Barnyard is quarantined and not available to the public until the quarantine is lifted.  
-                                    <em>Please know our animal residents are fine and this quarantine is helping to keep them safe.  </em>
-<p>We appreciate your patience and understanding during this time.  Thank you.
-<i>&mdash;The Hart Park Staff, 661-259-1750</i>
-
-                                    </p>
-                                    </td>
-                                </tr>
-                                <tr>
-                                  <td style="vertical-align: top;">
-                                        <font color="#FFCC00" size="6">
-                                          <img
-                                            src="images/baseline_v2.gif"
-                                            border="0" height="24"
-                                            width="313"></font></b></i></td>
-                                </tr>
                               </tbody>
                             </table>
                                 <p style="text-indent: 20px"
@@ -257,16 +234,10 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                     continued support.</font></p>
                               </b></i></td>
                           <td align="center" valign="top" width="557">
-                          <p>
-<h2 align="center">Tickets now sold out for <br></h2>
 <p align="center">
-<a href="Event_Pages/silents.html">
-<img src="Event_Pages/silents/silents2019sign-sm.jpg"/>
+<a target="_blank" href= "http://www.hdmmrc.com/hdmmrc/events.html">
+<img src="Event_Pages/trains2019-sm.png"/>
 </a>
-<p align="center">
-<h3 align="center">Click 
-<a href="Event_Pages/silents.html">HERE</a> for detais.
-</h3>
 <br>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2019 Calendar of Events</h2>
@@ -274,18 +245,10 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
-                                  <tbody>
+<tbody>
 
 <tr> <td id="EventDate">
-Saturday, August 10<sup>th</sup> at 6pm
-</td> <td id="Event"> 
-<a href="Event_Pages/silents.html">
-Silents Under the Stars
-</a>
-</td></tr>
-
-<tr> <td id="EventDate">
-Friday at dusk, Aug 16<sup>th</sup>
+Fridays at dusk, Aug 16<sup>th</sup> &amp; 30<sup>th</sup>
 </td> <td id="Event"> 
 <a href= "Event_Pages/movies2019/movies2019-lg.png" 
    title="Movies in the Park" rel="lightbox[events2019]">
@@ -296,9 +259,9 @@ Summer Movies in the Park
 <tr> <td id="EventDate">
 Saturday, Sept. 14<sup>th</sup> &amp; 15<sup>th</sup>, 10am&ndash;4pm in Hart Hall
 </td> <td id="Event"> 
-<a href= "Event_Pages/trains2019-lg.png" 
-   title="Hart Train Show" rel="lightbox[events2019]">
+<a target="_blank" href= "http://www.hdmmrc.com/hdmmrc/events.html">
 High Desert Modular Model Train Show
+<span><img src="images/ExternalLink.png"/></a></span>
 </a>
 </td></tr>
 
@@ -313,7 +276,10 @@ Native American Pow Wow &amp; Craft Fair
 <tr> <td id="EventDate">
 Sunday, Oct. 13<sup>th</sup>, 10am&ndash;4pm
 </td> <td id="Event"> 
+<a target="_blank" href="https://www.bowwowsandmeows.org/">
 Bow Wows &amp; Meows Pet Fair
+<span><img src="images/ExternalLink.png"/></a></span>
+</a>
 </td></tr>
 
 <tr> <td id="EventDate">
@@ -362,11 +328,17 @@ Cowboys &amp; Carols
                                 </table>
                                     <h3 align="center">Join in the fun by<br><a href="The_Friends/membership.html">
                                     joining The Friends of Hart Park</a>!</h3>
-<!--
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
--->
+                                    <img id="leftside" src="Zoo/images/deer_LayingDown.jpg" />
+                                    <h2 align="center">
+                                    <br>Barnyard partially re-opened!
+                                    </h2>
+                                    <p align="center">
+                                    Click <a href="Zoo/animals.html">here</a>
+                                    for details.
+                                    </p>
                       </tbody>
                     </table>
                     <hr>
