--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -120,27 +120,27 @@ function MM_swapImage() { //v3.0
 										<br>
 										and the<br>
 &nbsp;William S. Hart Park &amp; Museum <br><br>
-<h2 align="center" class="silents">are proud to present the 2019</font></span></span></h2></p>
+<h2 align="center" class="silents">want to thank you for coming to the the 2019</font></span></span></h2></p>
 											<p align="center" style="margin-top: 20px; margin-bottom: 20px">
 										<span class="Apple-style-span">
 										<span style="border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
 										<font size="6" face="Copperplate Gothic Bold">Silents</font></span><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span"><font size="6"><span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px"> Under the Stars</span></font></span></span></p>
 											<span class="Apple-style-span" style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
-											<h2 class="silents" align="center">
-											Saturday, August 10<sup>th</sup> at 6pm
-											</h2></span>
-											<h3 class="silents" align="center">
-											Mansion tours available 5&mdash;6:45pm
-											</h3></span>
+											</span>
+                                            <h2 align="center" class="silents">
+                                            Please check back here for 2020! Thank you, valued supporters!
+											</span>
                                             </TD>
 											<TD valign="top">
-											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
-                                            <br>
-                                            <h2 align="center" class="silents">
-                                            Ticket sales closed for
-                                            this year's event.  Thank you, valued supporters!
+											<h2 class="silents" align="center" >
+                                             Click below for photos from 
+                                             <a target="_blank" href="https://www.facebook.com/pg/friendsofhartpark/photos/?tab=album&album_id=2452268634838065">
+                                             2019's Silents Under the Stars!
+                                            <span><img src="../images/ExternalLink.png"/></span>
+                                             </h2>
                                              <br>
-                                             <br>
+                                             <img src="silents/silents2019/silents2019thumbnail.jpg"/>
+                                             </a>
                                              <!--
                                             <a target="_blank" 
                                              href="https://www.eventbrite.com/e/silents-under-the-stars-2019-hart-hall-william-s-hart-park-newhall-ca-tickets-63519411269">
@@ -160,7 +160,7 @@ function MM_swapImage() { //v3.0
 											    <table border="0" width="100%">
 													<tr>
 														<td colspan="2">
-                                                        <img align="center" src="silents/silents2019.png"/>
+                                                        <img align="center" src="silents/silents2019/silents2019.png"/>
                                                         </td>
                                                     </tr>
 													<tr>
