Updated board of directors, per Sheila.

--- a/The_Friends/directors.html
+++ b/The_Friends/directors.html
@@ -163,7 +163,7 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             <td align="left">Director</td>
                           </tr>
                           <tr>
-                            <td id="BOLD" align="left">Cindy Beals<br>
+                            <td id="BOLD" align="left">Tom Hough<br>
                             </td>
                             <td align="left">Director/Treasurer</td>
                             <td align="left"><br>
@@ -197,7 +197,7 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             <td align="left">Director</td>
                             <td align="left"><br>
                             </td>
-                            <td id="BOLD" align="left">Alexandra Gooch<br>
+                            <td id="BOLD" align="left">Michelle Rennie<br>
                             </td>
                             <td align="left">Director</td>
                           </tr>
@@ -206,7 +206,7 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             <td align="left">Director</td>
                             <td align="left"><br>
                             </td>
-                            <td id="BOLD" align="left">Sherron Blowers</td>
+                            <td id="BOLD" align="left">Nancy Gallarado</td>
                             <td align="left">Director</td>
                           </tr>
                           <tr>
@@ -221,11 +221,11 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                           <tr>
                             <td id="BOLD" align="left">Tim Murphy<br>
                             </td>
-                            <td align="left">Associate Director</td>
+                            <td align="left">Director</td>
                             <td align="left"><br>
                             </td>
-                            <td id="BOLD" align="left">John Grannis</td>
-                            <td align="left">Associate Director</td>
+                            <td id="BOLD" align="left"></td>
+                            <td align="left"></td>
                           </tr>
                           <tr>
                             <td id="BOLD" align="left">&nbsp;</td>
