--- a/index.html
+++ b/index.html
@@ -205,6 +205,12 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   <a target="_blank" href="http://bit.ly/hartofthematter">
                                   <img width="312" src="images/eHOTM.png" />
                                   </a>
+                                  <h2>
+                                  Click
+                                  <a href="https://mailchi.mp/499a4392601b/fall-2019-hart-of-the-matter?fbclid=IwAR0dha2xmVRxAn5cceVmK0GX6BCJKhsNxDZXN8uScXzmfThWpKZMhi3diFA"  target="_blank">
+                                  HERE for the Fall 2019 edition
+                                  </a>
+                                  </h2>
                                   </td>
                                 </tr>
                                 <tr>
@@ -235,9 +241,11 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <p align="center">
-<a target="_blank" href= "http://www.hdmmrc.com/hdmmrc/events.html">
-<img src="Event_Pages/trains2019-sm.png"/>
+<h2>Join us at this year's</h2><br>
+<a href="Event_Pages/powwow.html">
+<img src="Event_Pages/PowWowTitle.png"/>
 </a>
+Saturday, Oct. 5<sup>th</sup> 11am&mdash;6pm &amp; Sunday, Oct 6<sup>th</sup> 11am&mdash;5pm
 <br>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2019 Calendar of Events</h2>
@@ -246,24 +254,6 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
 <tbody>
-
-<tr> <td id="EventDate">
-Fridays at dusk, Aug 16<sup>th</sup> &amp; 30<sup>th</sup>
-</td> <td id="Event"> 
-<a href= "Event_Pages/movies2019/movies2019-lg.png" 
-   title="Movies in the Park" rel="lightbox[events2019]">
-Summer Movies in the Park
-</a>
-</td></tr>
-
-<tr> <td id="EventDate">
-Saturday, Sept. 14<sup>th</sup> &amp; 15<sup>th</sup>, 10am&ndash;4pm in Hart Hall
-</td> <td id="Event"> 
-<a target="_blank" href= "http://www.hdmmrc.com/hdmmrc/events.html">
-High Desert Modular Model Train Show
-<span><img src="images/ExternalLink.png"/></a></span>
-</a>
-</td></tr>
 
 <tr> <td id="EventDate">
 Saturday, Oct. 5<sup>th</sup> 11am&ndash;6pm &amp; Sunday, Oct 6<sup>th</sup> 11am&ndash;5pm
