Added Flea Market and links for Rose Show

--- a/index.htm
+++ b/index.htm
@@ -241,11 +241,12 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <p align="center">
-<h2>Join us at this year's</h2><br>
-<a href="Event_Pages/powwow.html">
-<img src="Event_Pages/PowWowTitle.png"/>
+<h2>Just-added Event!</h2><br>
+<a href= "Event_Pages/fleaMarket2019/FleaMarket2019-lg.png" 
+title="Flea Market &amp; Book Sale" rel="lightbox[2019]">
+<img src="Event_Pages/fleaMarket2019/FleaMarket2019-sm.png"/>
 </a>
-Saturday, Oct. 5<sup>th</sup> 11am&mdash;6pm &amp; Sunday, Oct 6<sup>th</sup> 11am&mdash;5pm
+Saturday, Oct. 26<sup>th</sup> 9am&mdash;3pm
 <br>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2019 Calendar of Events</h2>
@@ -256,25 +257,19 @@ Saturday, Oct. 5<sup>th</sup> 11am&mdash;6pm &amp; Sunday, Oct 6<sup>th</sup> 11
 <tbody>
 
 <tr> <td id="EventDate">
-Saturday, Oct. 5<sup>th</sup> 11am&ndash;6pm &amp; Sunday, Oct 6<sup>th</sup> 11am&ndash;5pm
+Saturday, Oct. 26<sup>th</sup> 9am&ndash;3pm in Trading Post parking lot
 </td> <td id="Event"> 
-<a href="Event_Pages/powwow.html">
-Native American Pow Wow &amp; Craft Fair
+<a href= "Event_Pages/fleaMarket2019/FleaMarket2019-lg.png" 
+title="Flea Market &amp; Book Sale" rel="lightbox[2019]">
+Collector's Flea Market &amp; Book Sale
 </a>
 </td></tr>
 
 <tr> <td id="EventDate">
-Sunday, Oct. 13<sup>th</sup>, 10am&ndash;4pm
+Saturday, Nov. 2<sup>nd</sup> 10am&ndash;4pm in Hart Hall
 </td> <td id="Event"> 
-<a target="_blank" href="https://www.bowwowsandmeows.org/">
-Bow Wows &amp; Meows Pet Fair
-<span><img src="images/ExternalLink.png"/></a></span>
-</a>
-</td></tr>
-
-<tr> <td id="EventDate">
-Saturday, Nov. 2<sup>nd</sup> in Hart Hall
-</td> <td id="Event"> 
+<a href= "Event_Pages/rose2019.png" 
+title="SCV Rose Society Show" rel="lightbox[2019]">
 SCV Rose Society&mdash;25th Annual Wild West Rose Show
 </td></tr>
 
