--- a/index.html
+++ b/index.html
@@ -276,7 +276,10 @@ SCV Rose Society&mdash;25th Annual Wild West Rose Show
 <tr> <td id="EventDate">
 Satuday &amp; Sunday, Nov 23<sup>rd</sup> &amp; 24<sup>th</sup>, 10am&ndash;4pm in Hart Hall
 </td> <td id="Event"> 
+<a href= "Event_Pages/HartHolidayBoutique2019-lg.png" 
+title="Hart Holiday Boutique" rel="lightbox[2019]">
 8th Annual Hart Holiday Boutique
+</a>
 </td></tr>
 
 <tr> <td id="EventDate">
