Fixed museum hours; made flea market past.

--- a/Mansion/mansion.html
+++ b/Mansion/mansion.html
@@ -220,8 +220,8 @@ cellspacing="0" bgcolor="#F6F5EE">
                         William S. Hart park is less than an hour's
                         drive from most areas of Los Angeles.</p>
 
-                        <p>Tours are every half hour, 11am to 4pm
-                        (last tour at 3:30pm).</p>
+                        <p>Tours begin on every hour, 11am to 4pm
+                        (last tour at 3:00pm).</p>
 
                         <p>Handicap accommodations are
                         available.</p>
@@ -230,10 +230,7 @@ cellspacing="0" bgcolor="#F6F5EE">
                         verify hours, visit <a href=
                         "http://www.hartmuseum.org" target=
                         "_blank">www.hartmuseum.org</a>.</p>
-                        <!--  ********************************************** -->
                       </td>
-
-                      <td width="60">&nbsp;</td>
                     </tr>
                   </tbody>
                 </table>
