--- a/index.htm
+++ b/index.htm
@@ -241,12 +241,10 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <p align="center">
-<h2>Just-added Event!</h2><br>
-<a href= "Event_Pages/fleaMarket2019/FleaMarket2019-lg.png" 
-title="Flea Market &amp; Book Sale" rel="lightbox[2019]">
-<img src="Event_Pages/fleaMarket2019/FleaMarket2019-sm.png"/>
+<a href= "Event_Pages/rose2019.png" 
+title="SCV Rose Society Show" rel="lightbox[2019]">
+<img src="Event_Pages/rose2019-sm.png"/>
 </a>
-Saturday, Oct. 26<sup>th</sup> 9am&mdash;3pm
 <br>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2019 Calendar of Events</h2>
@@ -255,15 +253,6 @@ Saturday, Oct. 26<sup>th</sup> 9am&mdash;3pm
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
 <tbody>
-
-<tr> <td id="EventDate">
-Saturday, Oct. 26<sup>th</sup> 9am&ndash;3pm in Trading Post parking lot
-</td> <td id="Event"> 
-<a href= "Event_Pages/fleaMarket2019/FleaMarket2019-lg.png" 
-title="Flea Market &amp; Book Sale" rel="lightbox[2019]">
-Collector's Flea Market &amp; Book Sale
-</a>
-</td></tr>
 
 <tr> <td id="EventDate">
 Saturday, Nov. 2<sup>nd</sup> 10am&ndash;4pm in Hart Hall
