Made Pow Wow past event

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -172,7 +172,7 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
 Fernandeno Tataviam Band of Mission Indians,<br>
 County of Los Angeles Dept. of Parks and Recreation,<br>
 and The Friends of Hart Park &amp; Museum<br></h2>
-<h3 align="center"><i>are proud to present the<br></i></h3></p>
+<h3 align="center"><i>were proud to present the<br></i></h3></p>
                             <h2 align="center">26<sup>th</sup> Annual</h2>
                             <p align="center"> </p>
                             <p align="center"> </p>
@@ -181,6 +181,7 @@ and The Friends of Hart Park &amp; Museum<br></h2>
                             </p>
                             <p align="center"> </p>
                             <h2 align="center"> and Craft Fair<br><br></h2>
+<h1 align="center">Stay tuned to this page for details on the 2020 Pow Wow, as they become available!</h1>
                               </h2>
                     <hr>
 <p><h2 align="center">
