Removed Cowboys & Carols per Margi B.

--- a/index.htm
+++ b/index.htm
@@ -207,8 +207,8 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   </a>
                                   <h2>
                                   Click
-                                  <a href="https://mailchi.mp/499a4392601b/fall-2019-hart-of-the-matter?fbclid=IwAR0dha2xmVRxAn5cceVmK0GX6BCJKhsNxDZXN8uScXzmfThWpKZMhi3diFA"  target="_blank">
-                                  HERE for the Fall 2019 edition
+                                  <a href="https://mailchi.mp/4d78795516a6/fall-2019-hart-of-the-matter-2199537"  target="_blank">
+                                  HERE for the Winter 2019&mdash;2020 edition
                                   </a>
                                   </h2>
                                   </td>
@@ -241,9 +241,9 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <p align="center">
-<a href= "Event_Pages/rose2019.png" 
-title="SCV Rose Society Show" rel="lightbox[2019]">
-<img src="Event_Pages/rose2019-sm.png"/>
+<a href= "Event_Pages/HartHolidayBoutique2019-lg.png" 
+title="Hart Holiday Boutique" rel="lightbox[2019]">
+<img src="Event_Pages/HartHolidayBoutique2019-sm.png"/>
 </a>
 <br>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
@@ -255,26 +255,12 @@ title="SCV Rose Society Show" rel="lightbox[2019]">
 <tbody>
 
 <tr> <td id="EventDate">
-Saturday, Nov. 2<sup>nd</sup> 10am&ndash;4pm in Hart Hall
-</td> <td id="Event"> 
-<a href= "Event_Pages/rose2019.png" 
-title="SCV Rose Society Show" rel="lightbox[2019]">
-SCV Rose Society&mdash;25th Annual Wild West Rose Show
-</td></tr>
-
-<tr> <td id="EventDate">
 Satuday &amp; Sunday, Nov 23<sup>rd</sup> &amp; 24<sup>th</sup>, 10am&ndash;4pm in Hart Hall
 </td> <td id="Event"> 
 <a href= "Event_Pages/HartHolidayBoutique2019-lg.png" 
 title="Hart Holiday Boutique" rel="lightbox[2019]">
 8th Annual Hart Holiday Boutique
 </a>
-</td></tr>
-
-<tr> <td id="EventDate">
-Saturday, Dec. 7<sup>th</sup>
-</td> <td id="Event"> 
-Cowboys &amp; Carols
 </td></tr>
                                     <!--
                                     <tr>
