--- a/index.html
+++ b/index.html
@@ -241,13 +241,10 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <p align="center">
-<a href= "Event_Pages/HartHolidayBoutique2019-lg.png" 
-title="Hart Holiday Boutique" rel="lightbox[2019]">
-<img src="Event_Pages/HartHolidayBoutique2019-sm.png"/>
-</a>
+<img src="images/HappyHolidays.png"/>
 <br>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-                                <h2>2019 Calendar of Events</h2>
+                                <h2>2020 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
@@ -255,11 +252,19 @@ title="Hart Holiday Boutique" rel="lightbox[2019]">
 <tbody>
 
 <tr> <td id="EventDate">
-Satuday &amp; Sunday, Nov 23<sup>rd</sup> &amp; 24<sup>th</sup>, 10am&ndash;4pm in Hart Hall
+Friday, Satuday &amp; Sunday, Feb 14<sup>th</sup> &mdash; 16<sup>th</sup>
 </td> <td id="Event"> 
-<a href= "Event_Pages/HartHolidayBoutique2019-lg.png" 
-title="Hart Holiday Boutique" rel="lightbox[2019]">
-8th Annual Hart Holiday Boutique
+<a target="_blank" 
+   href= "https://hartmuseum.org/newhallywood-silent-film-festival" >
+Newhallywood Silent Film Festival
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+Satuday &amp; Sunday, Apr 18<sup>th</sup> &amp; 19<sup>th</sup>
+</td> <td id="Event"> 
+<a target="_blank" 
+   href= "http://cowboyfestival.org" >
+Cowboy Festival
 </a>
 </td></tr>
                                     <!--
