--- a/index.html
+++ b/index.html
@@ -241,7 +241,10 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <p align="center">
-<img src="images/HappyHolidays.png"/>
+<a target="_blank" 
+   href= "https://hartmuseum.org/newhallywood-silent-film-festival" >
+<img src="Event_Pages/Newhallywood.png"/>
+</a>
 <br>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2020 Calendar of Events</h2>
