--- a/index.htm
+++ b/index.htm
@@ -221,6 +221,26 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                             border="0" height="24"
                                             width="313"></font></b></i></td>
                                 </tr>
+                                <tr><td>
+                                    <p align="center">
+                                    <img src="Zoo/images/deer_LayingDown.jpg" />
+                                    <h3 align="center">
+                                    <br>Barnyard partially re-opened!
+                                    </h3>
+                                    </p>
+                                    <p align="center">
+                                    Click <a href="Zoo/animals.html">here</a>
+                                    for details.
+                                    </p>
+                                </td></tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
+                                        <font color="#FFCC00" size="6">
+                                          <img
+                                            src="images/baseline_v2.gif"
+                                            border="0" height="24"
+                                            width="313"></font></b></i></td>
+                                </tr>
                               </tbody>
                             </table>
                                 <p style="text-indent: 20px"
@@ -241,9 +261,9 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <p align="center">
-<a target="_blank" 
-   href= "https://hartmuseum.org/newhallywood-silent-film-festival" >
-<img src="Event_Pages/Newhallywood.png"/>
+<a target="_blank" href= "http://cowboyfestival.org" >
+<img src="Event_Pages/cowboyfest2020-sm.jpg"/>
+<br>
 </a>
 <br>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
@@ -255,20 +275,72 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <tbody>
 
 <tr> <td id="EventDate">
-Friday, Satuday &amp; Sunday, Feb 14<sup>th</sup> &mdash; 16<sup>th</sup>
-</td> <td id="Event"> 
-<a target="_blank" 
-   href= "https://hartmuseum.org/newhallywood-silent-film-festival" >
-Newhallywood Silent Film Festival
-</a>
-</td></tr>
-<tr> <td id="EventDate">
 Satuday &amp; Sunday, Apr 18<sup>th</sup> &amp; 19<sup>th</sup>
 </td> <td id="Event"> 
 <a target="_blank" 
    href= "http://cowboyfestival.org" >
 Cowboy Festival
 </a>
+</td></tr>
+<tr> <td id="EventDate">
+Satuday &amp; Sunday, Jun 13<sup>th</sup> &amp; 14<sup>th</sup> 10am&mdash;5pm in Hart Hall
+</td> <td id="Event"> 
+SCV Quilt Guild Quilt Show
+</td></tr>
+<tr> <td id="EventDate">
+Fridays, June 19<sup>th</sup>, July 17<sup>th</sup>, July 31<sup>st</sup>, Aug 21<sup>st</sup> at dusk, Picnic Grounds
+</td> <td id="Event"> 
+Summer Movies in the Park Series 
+</td></tr>
+<tr> <td id="EventDate">
+Thursday, July 12<sup>th</sup> at 7pm in Hart Hall (Admission is free)
+</td> <td id="Event"> 
+&ldquo;Saxtravaganza&rdquo; &ndash; Chamber Music Concert
+</td></tr>
+<tr> <td id="EventDate">
+Saturday, August 8<sup>th</sup> at 6pm, Hart Hall patio
+</td> <td id="Event"> 
+Silents Under the Stars
+</td></tr>
+<tr> <td id="EventDate">
+Satuday &amp; Sunday, Sep 12<sup>th</sup> &amp; 13<sup>th</sup> 10am&mdash;4pm in Hart Hall
+</td> <td id="Event"> 
+The High Desert Modular Model Railroad Club Annual Train Show
+</td></tr>
+<tr> <td id="EventDate">
+Sunday, Sept. 20<sup>th</sup> 8am&mdash;12pm
+</td> <td id="Event"> 
+Yoga Kula (Community) Festival
+</td></tr>
+<tr> <td id="EventDate">
+Satuday &amp; Sunday, Oct. 3<sup>rd</sup> 11am&mdash;6pm &amp; Oct 4<sup>th</sup> 11am&mdash;5pm, Picnic Grounds
+</td> <td id="Event"> 
+Native American Pow Wow &amp; Craft Fair
+</td></tr>
+<tr> <td id="EventDate">
+Sunday, Oct. 11<sup>th</sup> 11am&mdash;4pm, Picnic Grounds
+</td> <td id="Event"> 
+Bow Wows &amp; Meows Pet Fair
+</td></tr>
+<tr> <td id="EventDate">
+Satuday &amp; Sunday, Oct. 17<sup>th</sup> &amp; Oct 18<sup>th</sup> in Hart Hall
+</td> <td id="Event"> 
+SCV Artists Association Arts Classic
+</td></tr>
+<tr> <td id="EventDate">
+Saturday, Nov. 7<sup>th</sup> in Hart Hall
+</td> <td id="Event"> 
+SCV Rose Society &ndash; 25<sup>th</sup> Annual Wild West Rose Show
+</td></tr>
+<tr> <td id="EventDate">
+Saturday &amp; Sunday, Nov 21<sup>st</sup> &amp; 22<sup>nd</sup> 10am&mdash;4pm in Hart Hall
+</td> <td id="Event"> 
+9th Annual Hart Holiday Boutique
+</td></tr>
+<tr> <td id="EventDate">
+Satuday, Dec. 5<sup>th</sup>
+</td> <td id="Event"> 
+Cowboys &amp; Carols
 </td></tr>
                                     <!--
                                     <tr>
@@ -299,17 +371,11 @@ Cowboy Festival
                                 </table>
                                     <h3 align="center">Join in the fun by<br><a href="The_Friends/membership.html">
                                     joining The Friends of Hart Park</a>!</h3>
+                                    <!--
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-                                    <img id="leftside" src="Zoo/images/deer_LayingDown.jpg" />
-                                    <h2 align="center">
-                                    <br>Barnyard partially re-opened!
-                                    </h2>
-                                    <p align="center">
-                                    Click <a href="Zoo/animals.html">here</a>
-                                    for details.
-                                    </p>
+                                    -->
                       </tbody>
                     </table>
                     <hr>
