Cowboy Festival and Mansion (and giftstore, sort of) closed due to fears over coronavirus.

--- a/index.htm
+++ b/index.htm
@@ -260,11 +260,16 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                     continued support.</font></p>
                               </b></i></td>
                           <td align="center" valign="top" width="557">
-<p align="center">
-<a target="_blank" href= "http://cowboyfestival.org" >
-<img src="Event_Pages/cowboyfest2020-sm.jpg"/>
-<br>
-</a>
+<p>
+We are sorry to report the temporary closing of William S. Hart Museum and the gift shop to avoid 
+potential spread of the Coronavirus.  The park and barnyard are still open, however we will not be doing group 
+tours nor animal presentations until further notice. 
+<p>Also, we request that guests who are sick to not 
+visit the park  - for the health of our other guests, staff and volunteers. 
+</p>
+<p>
+Please check back here regularly for Friends of Hart Park updates.
+</p>
 <br>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2020 Calendar of Events</h2>
@@ -275,12 +280,9 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <tbody>
 
 <tr> <td id="EventDate">
-Satuday &amp; Sunday, Apr 18<sup>th</sup> &amp; 19<sup>th</sup>
+<del>Satuday &amp; Sunday, Apr 18<sup>th</sup> &amp; 19<sup>th</sup></del>
 </td> <td id="Event"> 
-<a target="_blank" 
-   href= "http://cowboyfestival.org" >
-Cowboy Festival
-</a>
+<del>Cowboy Festival</del> <i>We are sorry to report that this year's Cowboy Festival is cancelled due to concerns over Coronavirus</i>
 </td></tr>
 <tr> <td id="EventDate">
 Satuday &amp; Sunday, Jun 13<sup>th</sup> &amp; 14<sup>th</sup> 10am&mdash;5pm in Hart Hall
